# load-test-fastapi

./: Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py
tests/: body.json  test-run.json  test-run.json.html
tests/artillery/: config.yaml
tests/k6/: k6-const.js  k6.js
tests/wrk/: body_req.lua
