[tool.poetry]
name = "test_fastapi"
version = "0.1.0"
description = ""
authors = ["aakazachinskii <aakazachinskii@domclick.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
